syntax = "proto3";

option csharp_namespace = "ProductAPI.Protos";

import "google/protobuf/empty.proto";

package product;

service ProductProtoService {
  rpc GetAll (google.protobuf.Empty) returns (ProductList);
  rpc GetById (GetProductRequest) returns (ProductModel);
  rpc Create (CreateProductRequest) returns (ProductModel);
  rpc Update (UpdateProductRequest) returns (ProductModel);
  rpc Delete (DeleteProductRequest) returns (DeleteProductResponse);
}

message ProductModel {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
}

message ProductList {
  repeated ProductModel products = 1;
}

message GetProductRequest {
  int32 id = 1;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
}

message UpdateProductRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
}

message DeleteProductRequest {
  int32 id = 1;
}

message DeleteProductResponse {
  bool success = 1;
}